--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
+
 interface Props {
 	title: string;
 }
@@ -7,6 +9,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
+
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -19,6 +22,7 @@ const { title } = Astro.props;
 	<body>
 		<slot />
 	</body>
+	<ViewTransitions />
 </html>
 <style is:global>
 	:root {
@@ -48,3 +52,4 @@ const { title } = Astro.props;
 			monospace;
 	}
 </style>
+
