--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro"
 import Card from "../components/Card.astro"
 ---
 
-<Layout title="Minerva Testing Lab - Home">
+<Layout title="Minerva Testing Lab - About">
   <main>
     <svg
       class="astro-a"
@@ -33,16 +33,22 @@ import Card from "../components/Card.astro"
         </linearGradient>
       </defs>
     </svg>
+
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+    <a href="/blog">blog</a>
 
-    <h1>Welcome to <span class="text-gradient">Minerva Studio Project</span></h1>
-    <p class="instructions">
-      To get started, open the directory <code>src/pages</code> in your project.<br
-      />
-      <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
-      above.
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
+
+    <p>
+      I am working through Astro's introductory tutorial. This is the second
+      page on my website, and it's the first one I built myself!
+    </p>
+
+    <p>
+      This site will update as I complete more of the tutorial, so keep checking
+      back and see how my journey is going!
     </p>
     <ul role="list" class="link-card-grid">
       <Card
@@ -65,7 +71,8 @@ import Card from "../components/Card.astro"
         title="Community"
         body="Come say hi to our amazing Discord community. ❤️"
       />
-      <Card href="/about" title="About" body="This is some new page! ❤️" />
+
+      <Card href="/" title="Home" body="This goes to the home page ❤️" />
     </ul>
   </main>
 </Layout>
