--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -15,8 +15,8 @@ import Head from "../layouts/BaseLayout.astro"
     <h1 style="height: 50vh;">
       Welcome to <span class="text-gradient">Minerva Studio</span>
     </h1>
-    <h1 style="height: 50vh;">One</h1>
-    <a style="height: 50vh;" href="/test">test link</a>
+    <h1 style="height: 50vh;">KABOOOM</h1>
+    <a style="height: 50vh;" href="/">Home link</a>
     <h1 style="height: 50vh;">three</h1>
     <h1 style="height: 50vh;">four</h1>
     <h1 style="height: 50vh;">five</h1>
