Another test with changing the distro JS file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Head from "../layouts/BaseLayout.astro"
     <nav></nav>
 
     <h1 style="height: 50vh;">
-      Why Not to <span class="text-gradient">Minerva Studio</span>
+      Why to <span class="text-gradient">Minerva Studio</span>
     </h1>
     <h1 style="height: 50vh;">One</h1>
     <a style="height: 50vh;" href="/test">test link</a>
