Removal of GSAP Club for another test later

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -100,6 +100,19 @@ Note: This website was created with a focus on user experience and accessibility
       </div>
     </div>
     <script>
+      // import { gsap } from "gsap-trial"
+      // import ScrollTrigger from "gsap-trial/ScrollTrigger"
+      // import ScrollSmoother from "gsap-trial/ScrollSmoother"
+
+      // gsap.registerPlugin(ScrollTrigger, ScrollSmoother)
+
+      // document.addEventListener("astro:page-load", () => {
+      //   const content = document.getElementById("smooth-content")
+      //   gsap.set(document.body, { height: content.clientHeight })
+      //   ScrollSmoother.create({
+      //     smooth: 1.5,
+      //   })
+      // })
     </script>
   </body>
 </html>
