--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -2,7 +2,7 @@
   font-size: clamp(14px, calc(14px + max(0.26666vw, 0.149vh)), 18px);
 }
 
-@font-face {
+/* @font-face {
   font-family: Pelak;
   src: url("/assets/fonts/Pelak-100.ttf");
   font-weight: 100;
@@ -46,7 +46,7 @@
   font-family: Pelak;
   src: url("/assets/fonts/Pelak-800.ttf");
   font-weight: 800;
-}
+} */
 
 * {
   direction: ltr;
