Moved JS Animation files to /public to see if it works on build version

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -101,9 +101,9 @@ Note: This website was created with a focus on user experience and accessibility
       </div>
     </div>
 
-    <script defer src="src/assets/js/GSAP/gsap.min.js"></script>
-    <script defer src="src/assets/js/GSAP/ScrollTrigger.min.js"></script>
-    <script defer src="src/assets/js/GSAP/ScrollSmoother.min.js"></script>
-    <script defer src="src/assets/js/GSAP/MainAnimations.js"></script>
+    <script defer src="/js/GSAP/gsap.min.js"></script>
+    <script defer src="/js/GSAP/ScrollTrigger.min.js"></script>
+    <script defer src="/js/GSAP/ScrollSmoother.min.js"></script>
+    <script defer src="/js/GSAP/MainAnimations.js"></script>
   </body>
 </html>
