Improved SmoothScroll Created a component for text to split into words and show up from below

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,6 @@ import "../css/global.css"
 import "../css/variables.css"
 import "../css/typography.css"
 
-
 interface Props {
   title: string
   description: string
@@ -95,15 +94,14 @@ Note: This website was created with a focus on user experience and accessibility
   </head>
 
   <body>
-    <div id="smooth-wrapper">
-      <div id="smooth-content">
-        <slot />
-      </div>
+    <div id="smooth-content">
+      <slot />
     </div>
 
     <script defer src="/js/GSAP/gsap.min.js"></script>
     <script defer src="/js/GSAP/ScrollTrigger.min.js"></script>
     <script defer src="/js/GSAP/ScrollSmoother.min.js"></script>
+    <script defer src="/js/GSAP/SplitText.min.js"></script>
     <script defer src="/js/GSAP/MainAnimations.js"></script>
   </body>
 </html>
