Live Preview Demo

--- a/src/components/BreakTextLines.astro
+++ b/src/components/BreakTextLines.astro
@@ -1,16 +1,19 @@
 ---
+interface Props {
+  fontSize: string
+}
 
+const { fontSize } = Astro.props
 ---
 
-<div id="LineSplitWrapper">
-  <div id="LineSplit">
-    <slot />
+<div id="LineSplitWrapper" >
+  <div id="LineSplit" class={fontSize}>
+    <slot  />
   </div>
 </div>
 
 <style>
   #LineSplitWrapper {
     overflow: hidden;
-    font-size: xx-large;
   }
 </style>
