--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -93,7 +93,7 @@ Note: This website was created with a focus on user experience and accessibility
     <ViewTransitions />
   </head>
 
-  <body>
+  <body style="text-align: center;">
     <div id="smooth-content">
       <slot />
     </div>
@@ -103,5 +103,9 @@ Note: This website was created with a focus on user experience and accessibility
     <script defer src="/js/GSAP/ScrollSmoother.min.js"></script>
     <script defer src="/js/GSAP/SplitText.min.js"></script>
     <script defer src="/js/GSAP/MainAnimations.js"></script>
+
+
   </body>
+  
 </html>
+
