--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Head from "../layouts/BaseLayout.astro"
-import BreakTextLines from "../components/BreakTextLines.astro";
+import BreakTextLines from "../components/BreakTextLines.astro"
 ---
 
 <Head
-  title="Minerva Studio - Expert Branding, Logo Design, and Web Solutions"
+  title="Minerva Studio - All eyes on your brand"
   description="Minerva Studio delivers premium branding, logo design, and web solutions to elevate your business. Our expert team creates impactful brand identities and stunning websites that drive success."
   canonicalURL="https://minervastudio.co/"
   ogTitle="Minerva Studio"
@@ -13,13 +13,10 @@ import BreakTextLines from "../components/BreakTextLines.astro";
   <main>
     <nav></nav>
 
-    <BreakTextLines>Lorem ipsum dolor</BreakTextLines>
-    <BreakTextLines> sit amet consectetur adipisicing elit?</BreakTextLines>
-    <BreakTextLines> Blanditiis recusandae a commodi cum sunt</BreakTextLines>
+    <BreakTextLines fontSize="h1">Welcome to Minerva Studo 🖋</BreakTextLines>
 
     <h1 style="height: 50vh;">
-      Why to <span class="text-gradient">Minerva Studio</span>
-    </h1>
+     All Eyes on Your Brand</h1>
     <h1 style="height: 50vh;">One</h1>
     <a style="height: 50vh;" href="/test">test link</a>
     <h1 style="height: 50vh;">three</h1>
