--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -51,24 +51,24 @@
 * {
   direction: ltr;
   color: var(--text-100);
-  font-family: Pelak;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   word-spacing: calc(-0.02 * 1em);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
   text-wrap: balance;
   font-weight: 600;
   line-height: calc(1.35 * 1em);
   letter-spacing: calc(-0.015 * 1em);
 }
 
-p {
+p, .p {
   text-wrap: pretty;
   max-width: 75ch;
   line-height: calc(1.65 * 1em);
@@ -79,23 +79,23 @@ a {
   text-decoration: none;
 }
 
-h1 {
+h1, .h1 {
   font-size: clamp(3.052rem, 3.43vw, 3.391rem);
 }
 
-h2 {
+h2, .h2 {
   font-size: clamp(2.441rem, 2.74vw, 2.712rem);
 }
 
-h3 {
+h3, .h3 {
   font-size: clamp(1.953rem, 2.19vw, 2.17rem);
 }
 
-h4 {
+h4, .h4 {
   font-size: clamp(1.563rem, 1.75vw, 1.736rem);
 }
 
-h5 {
+h5, .h5 {
   font-size: clamp(1.25rem, 1.4vw, 1.388rem);
 }
 
@@ -120,27 +120,27 @@ b:hover > a {
 }
 
 @media (max-width: 1000px) {
-  h1 {
+  h1, .h1 {
     font-size: calc(0.75 * clamp(3.052rem, 3.43vw, 3.391rem));
   }
 
-  h2 {
+  h2, .h2 {
     font-size: calc(0.75 * clamp(2.441rem, 2.74vw, 2.712rem));
   }
 
-  h3 {
+  h3, .h3 {
     font-size: calc(0.75 * clamp(1.953rem, 2.19vw, 2.17rem));
   }
 
-  h4 {
+  h4, .h4 {
     font-size: calc(0.75 * clamp(1.563rem, 1.75vw, 1.736rem));
   }
 
-  h5 {
+  h5, .h5 {
     font-size: calc(0.75 * clamp(1.25rem, 1.4vw, 1.388rem));
   }
 
-  p {
+  p, .p {
     max-width: unset;
   }
 }
