--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,6 +12,8 @@ interface Props {
   ogImage: string
 }
 
+import { AstroFont } from "astro-font";
+
 const { title, description, canonicalURL, ogTitle, ogImage } = Astro.props
 ---
 
@@ -89,6 +91,39 @@ Note: This website was created with a focus on user experience and accessibility
       rel="apple-touch-icon"
       sizes="180x180"
       href="/assets/fav/apple-touch-icon.png"
+    />
+
+    <AstroFont
+      config={[
+        {
+          name: "Afacad",
+          src: [
+            {
+              style: 'normal',
+              weight: '400',
+              path: './public/assets/fonts/Quantify.ttf'
+            },
+          ],
+          preload: true,
+          display: "swap",
+          selector: "h1, h2, h3, h4, h5, h6",
+          fallback: "sans-serif",
+        },
+        {
+          name: "Kiona",
+          src: [
+            {
+              weight: '400',
+              style: 'normal',
+              path: './public/assets/fonts/Kiona.ttf'
+            }
+          ],
+          preload: true,
+          display: "swap",
+          selector: "body",
+          fallback: "sans-serif",
+        },
+      ]}
     />
     <ViewTransitions />
   </head>
