--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,17 +13,14 @@ import BreakTextLines from "../components/BreakTextLines.astro"
   <main>
     <nav></nav>
 
-    <BreakTextLines fontSize="h1">Welcome to Minerva Studo 🖋</BreakTextLines>
 
-    <h1 style="height: 50vh;">
-     All Eyes on Your Brand</h1>
-    <h1 style="height: 50vh;">One</h1>
-    <a style="height: 50vh;" href="/test">test link</a>
-    <h1 style="height: 50vh;">three</h1>
-    <h1 style="height: 50vh;">four</h1>
-    <h1 style="height: 50vh;">five</h1>
-    <h1 style="height: 50vh;">six</h1>
-    <h1 style="height: 50vh;">seven</h1>
-    <p>This project is being worked on and is coming soon...</p>
+
+    <h1 style="margin-bottom: 10vh;">All Eyes on Your Brand</h1>
+    <h2 style="margin-bottom: 10vh;">All Eyes on Your Brand</h2>
+    <h3 style="margin-bottom: 10vh;">All Eyes on Your Brand</h3>
+    <h4 style="margin-bottom: 10vh;">All Eyes on Your Brand</h4>
+    <h5 style="margin-bottom: 10vh;">All Eyes on Your Brand</h5>
+    <h6 style="margin-bottom: 10vh;">All Eyes on Your Brand</h6>
+    <p style="margin-bottom: 10vh;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima iusto excepturi odit debitis dolores nesciunt voluptates animi nihil in unde explicabo error alias, ipsam vitae hic. Impedit rerum id eaque!</p>
   </main>
 </Head>
