--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,102 +1,69 @@
-:root {
-  font-size: clamp(14px, calc(14px + max(0.26666vw, 0.149vh)), 18px);
-}
-
-/* @font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-100.ttf");
-  font-weight: 100;
-}
-
-@font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-200.ttf");
-  font-weight: 200;
-}
-
-@font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-300.ttf");
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-400.ttf");
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-500.ttf");
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-600.ttf");
-  font-weight: 600;
-}
-@font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-700.ttf");
-  font-weight: 700;
-}
-@font-face {
-  font-family: Pelak;
-  src: url("/assets/fonts/Pelak-800.ttf");
-  font-weight: 800;
-} */
-
 * {
+  -webkit-transition: font-size .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -moz-transition: font-size .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -o-transition: font-size .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: font-size .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+body {
   direction: ltr;
-  color: var(--text-100);
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  word-spacing: calc(-0.02 * 1em);
-}
-
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  text-wrap: balance;
   font-weight: 600;
-  line-height: calc(1.35 * 1em);
-  letter-spacing: calc(-0.015 * 1em);
+  color: var(--text-100);
+  -webkit-font-smoothing: antialiased;
+  word-spacing: calc(-0.12 * 1em);
 }
 
-p, .p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+  font-weight: 400;
+  line-height: calc(1.15 * 1em);
+  letter-spacing: calc(-0.008 * 1em);
+}
+
+h1 {
+  font-size: calc(1rem * var(--font-scale) * var(--font-scale) * var(--font-scale) * var(--font-scale) * var(--font-scale) * var(--font-scale));
+}
+
+h2 {
+  font-size: calc(
+    1rem * var(--font-scale) * var(--font-scale) * var(--font-scale) *
+      var(--font-scale) * var(--font-scale)
+  );
+}
+
+h3 {
+  font-size: calc(
+    1rem * var(--font-scale) * var(--font-scale) * var(--font-scale) *
+      var(--font-scale)
+  );
+}
+
+h4 {
+  font-size: calc(
+    1rem * var(--font-scale) * var(--font-scale) * var(--font-scale)
+  );
+}
+
+h5 {
+  font-size: calc(1rem * var(--font-scale) * var(--font-scale));
+}
+
+h6 {
+  font-size: calc(1rem * var(--font-scale));
+}
+p {
   text-wrap: pretty;
   max-width: 75ch;
-  line-height: calc(1.65 * 1em);
-  letter-spacing: calc(0.008 * 1em);
+  line-height: calc(1.25 * 1em);
+  letter-spacing: calc(-0.004 * 1em);
 }
 
 a {
   text-decoration: none;
-}
-
-h1, .h1 {
-  font-size: clamp(3.052rem, 3.43vw, 3.391rem);
-}
-
-h2, .h2 {
-  font-size: clamp(2.441rem, 2.74vw, 2.712rem);
-}
-
-h3, .h3 {
-  font-size: clamp(1.953rem, 2.19vw, 2.17rem);
-}
-
-h4, .h4 {
-  font-size: clamp(1.563rem, 1.75vw, 1.736rem);
-}
-
-h5, .h5 {
-  font-size: clamp(1.25rem, 1.4vw, 1.388rem);
 }
 
 small {
@@ -120,27 +87,38 @@ b:hover > a {
 }
 
 @media (max-width: 1000px) {
-  h1, .h1 {
-    font-size: calc(0.75 * clamp(3.052rem, 3.43vw, 3.391rem));
-  }
-
-  h2, .h2 {
-    font-size: calc(0.75 * clamp(2.441rem, 2.74vw, 2.712rem));
-  }
-
-  h3, .h3 {
-    font-size: calc(0.75 * clamp(1.953rem, 2.19vw, 2.17rem));
-  }
-
-  h4, .h4 {
-    font-size: calc(0.75 * clamp(1.563rem, 1.75vw, 1.736rem));
-  }
-
-  h5, .h5 {
-    font-size: calc(0.75 * clamp(1.25rem, 1.4vw, 1.388rem));
-  }
-
-  p, .p {
+  p {
     max-width: unset;
+  }
+}
+
+/* Extra small devices (phones, portrait) */
+@media (max-width: 575.98px) {
+  :root {
+    --font-scale: 1.125;
+  }
+}
+
+/* Small devices (phones, landscape) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  :root {
+    --font-scale: 1.200;
+  }
+}
+
+
+
+/* Medium and Large devices (tablets, desktops) */
+@media (min-width: 768px) and (max-width: 1199.98px) {
+  :root {
+    --font-scale: 1.250;
+  }
+}
+
+/* Extra large devices (large desktops) */
+@media (min-width: 1200px) {
+  :root {
+    font-size: clamp(16px, 0.95vw, 18px);
+    --font-scale: 1.333;
   }
 }
