--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -105,7 +105,7 @@ Note: This website was created with a focus on user experience and accessibility
             },
           ],
           preload: true,
-          display: "swap",
+          display: 'block',
           selector: "h1, h2, h3, h4, h5, h6",
           fallback: "sans-serif",
         },
@@ -119,7 +119,7 @@ Note: This website was created with a focus on user experience and accessibility
             }
           ],
           preload: true,
-          display: "swap",
+          display: "block",
           selector: "body",
           fallback: "sans-serif",
         },
