Text Rotation component added

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -128,7 +128,7 @@ Note: This website was created with a focus on user experience and accessibility
     <ViewTransitions />
   </head>
 
-  <body style="text-align: center;">
+  <body>
     <div id="smooth-content">
       <slot />
     </div>
