--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ interface Props {
   ogImage: string
 }
 
-import { AstroFont } from "astro-font";
+import { AstroFont } from "astro-font"
 
 const { title, description, canonicalURL, ogTitle, ogImage } = Astro.props
 ---
@@ -70,28 +70,49 @@ Note: This website was created with a focus on user experience and accessibility
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2"
     />
-    <meta name="theme-color" content="" />
-    <meta name="msapplication-TileColor" content="" />
 
-    <link rel="shortcut icon" href="/assets/fav/icon64.png" />
-
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/icons/apple-touch-icon.png"
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/fav/icon32.png"
+      href="/assets/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/icons/android-chrome-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/fav/icon16.png"
+      href="/assets/icons/favicon-16x16.png"
     />
+    <link rel="manifest" href="/assets/icons/site.webmanifest" />
     <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/assets/fav/apple-touch-icon.png"
+      rel="mask-icon"
+      href="/assets/icons/safari-pinned-tab.svg"
+      color="#00a8a5"
     />
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="Minerva Studio" />
+    <meta name="application-name" content="Minerva Studio" />
+    <meta name="msapplication-TileColor" content="#00aba9" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/icons/mstile-144x144.png"
+    />
+    <meta
+      name="msapplication-config"
+      content="/assets/icons/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#000b0d" />
 
     <AstroFont
       config={[
@@ -99,13 +120,13 @@ Note: This website was created with a focus on user experience and accessibility
           name: "Afacad",
           src: [
             {
-              style: 'normal',
-              weight: '400',
-              path: './public/assets/fonts/Quantify.ttf'
+              style: "normal",
+              weight: "400",
+              path: "./public/assets/fonts/Quantify.ttf",
             },
           ],
           preload: true,
-          display: 'block',
+          display: "block",
           selector: "h1, h2, h3, h4, h5, h6",
           fallback: "sans-serif",
         },
@@ -113,10 +134,10 @@ Note: This website was created with a focus on user experience and accessibility
           name: "Kiona",
           src: [
             {
-              weight: '400',
-              style: 'normal',
-              path: './public/assets/fonts/Kiona.ttf'
-            }
+              weight: "400",
+              style: "normal",
+              path: "./public/assets/fonts/Kiona.ttf",
+            },
           ],
           preload: true,
           display: "block",
@@ -138,9 +159,5 @@ Note: This website was created with a focus on user experience and accessibility
     <script defer src="/js/GSAP/ScrollSmoother.min.js"></script>
     <script defer src="/js/GSAP/SplitText.min.js"></script>
     <script defer src="/js/GSAP/MainAnimations.js"></script>
-
-
   </body>
-  
 </html>
-
