--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -54,8 +54,8 @@ Note: This website was created with a focus on user experience and accessibility
     <meta property="og:site_name" content="Minerva Studio" />
     <meta property="og:image" content={ogImage} />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content={title} />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -112,7 +112,7 @@ Note: This website was created with a focus on user experience and accessibility
       name="msapplication-config"
       content="/assets/icons/browserconfig.xml"
     />
-    <meta name="theme-color" content="#000b0d" />
+    <meta name="theme-color" content="#02171a" />
 
     <AstroFont
       config={[
